# quantum-guard

./: README.md
quantum-guard-backend/: .env
quantum-guard-backend/data/: quantum_guard.db
quantum-guard-backend/quantum-guard-backend/: .env.example  .gitignore  README.md  auth.py  clear_all_data.py  conftest.py  database.py  email_sender.py  file_transfer.py  key_exchange.py  main.py  models.py  requirements.txt  test_auth_and_files.py  transfer.py
quantum-guard-frontend/: .gitignore  PROJECT_OVERVIEW.md  README.md  eslint.config.ts  index.html  package-lock.json  package.json  vite.config.ts
quantum-guard-frontend/docs/: LARGE_FILE_CRYPTO_FLOW.md
quantum-guard-frontend/scripts/: jpeg-to-png-icon.mjs
quantum-guard-frontend/src/: App.vue  main.ts
quantum-guard-frontend/src-tauri/: 2  Cargo.toml  tauri.conf.json
quantum-guard-frontend/src-tauri/capabilities/: default.json
quantum-guard-frontend/src-tauri/icons/: icon.icns
quantum-guard-frontend/src-tauri/src/: lib.rs  main.rs
quantum-guard-frontend/src/api/: client.ts
quantum-guard-frontend/src/components/: FileDownloader.vue  FileUploader.vue  SecurityDashboard.vue
quantum-guard-frontend/src/core/: crypto-stream.ts  cryptoEngine.ts  cryptoManager.ts  dsa-engine.ts  kem-engine.ts  key-storage.ts  local-key-init.ts  masterKey.ts  secure-sandbox.ts
quantum-guard-frontend/src/router/: index.ts
quantum-guard-frontend/src/services/: uploadService.ts
quantum-guard-frontend/src/store/: session.ts
quantum-guard-frontend/src/types/: streamsaver.d.ts
release/: README.md
(+8 files in other folders)
